about page mobile

--- a/source/about.jade
+++ b/source/about.jade
@@ -10,10 +10,10 @@ block content
   .id
     .visuel
       img(src="assets/images/morganne-borowczyk.jpg", alt="Portrait of Morganne Borowczyk")
-    .text
       h1 Get to know me
+    .text
       p Hi ! My name is Morganne Borowczyk. I am a design student at ECV Lille (France).
       p Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.
       p This year I've decided to dedicate myself to learning again and to focus on the creative part of the work. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.
       p I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.
-      p If you wish to make a commission please feel free to contact me hello@morganneborowczyk.design
+      p If you wish to make a commission please feel free to <a href="...">contact me</a>.
