--- a/assets/style/less/layout/fonts.less
+++ b/assets/style/less/layout/fonts.less
@@ -38,8 +38,11 @@ h6, .h6 {
 }
 
 h1, .h1 {
-  font-size: 3em;
-  line-height: 1;
+  font-size: 24px;
+  line-height: 33px;
+  letter-spacing: 10px;
+  margin: 10px 0 0;
+  padding: 70px 30px;
 }
 h2, .h2 {
   font-size: 1em;
