--- a/assets/style/less/layout/header.less
+++ b/assets/style/less/layout/header.less
@@ -128,14 +128,14 @@ ul.social {
   justify-content: space-around;
 }
 
-@media screen and (min-width: @screen-small) {
+@media screen and (min-width: @screen-s) {
   header {
     .brand {
       text-align: center;
     }
   }
 }
-@media screen and (min-width: @screen-medium) {
+@media screen and (min-width: @screen-m) {
   header {
     .brand {
       padding-top: 45px;
