--- a/assets/style/less/layout/variables.less
+++ b/assets/style/less/layout/variables.less
@@ -11,6 +11,7 @@
 
 @ease: ease-in-out;
 
-@screen-small: 768px;
-@screen-medium: 1000px;
-@screen-large: 1400px;
+@screen-xs: 480px;
+@screen-s: 768px;
+@screen-m: 1000px;
+@screen-l: 1400px;
