--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -17,7 +17,7 @@
   .grid-item.grid-item--width2 { width: 100%; }
 }
 
-@media screen and (min-width: @screen-small) {
+@media screen and (min-width: @screen-s) {
   .grid {
     .grid-sizer,
     .grid-item {
@@ -26,7 +26,7 @@
   }
 }
 
-@media screen and (min-width: @screen-medium) {
+@media screen and (min-width: @screen-m) {
   .grid {
     .grid-sizer,
     .grid-item {
