--- a/assets/style/less/layout/id.less
+++ b/assets/style/less/layout/id.less
@@ -1,30 +1,36 @@
 //main: ../app.less
 
 .id {
-  // display: -webkit-flex;
-  // display: -ms-flex;
-  // display: flex;
-  // align-items: center;
-  // justify-content: space-between;
   .visuel {
+    background-image: url("../../images/morganne-borowczyk.jpg");
+    background-size: cover;
+    background-position: center;
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
-    align-items: stretch;
+    align-items: center;
     justify-content: center;
     overflow: hidden;
     position: relative;
     background-color: @dark-grey;
-    img {
-      position: absolute;
-      opacity: .8;
-      // max-width: none;
-      // max-height: 100%;
-    }
+    height: calc(~"100vw - 40px");
+    max-height: 320px;
+    padding: 50px;
     h1 {
       position: relative;
       text-align: center;
       color: @background-color;
+      display: block;
+      margin: 10px 0 0;
+    }
+  }
+  @media screen and (min-width: @screen-s) {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    .visuel {
+      min-width: 300px;
+      margin-right: 50px;
     }
   }
 }
