--- a/source/_header.jade
+++ b/source/_header.jade
@@ -12,5 +12,5 @@ header
       li
         a(href="/about") About me
       li
-        a(href="/contact") Contact
+        a(href="mailto:hello@morganneborowczyk.design") Contact
     +social(white)
