--- a/source/about.jade
+++ b/source/about.jade
@@ -17,4 +17,4 @@ block content
       p I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.
       p.cta If you wish to make a commission please feel free to get in touch!
       p
-        +btn-large("Hire me","...")
+        +btn-large("Hire me","mailto:hello@morganneborowczyk.design")
