--- a/assets/style/less/layout/id.less
+++ b/assets/style/less/layout/id.less
@@ -31,13 +31,20 @@
     .visuel {
       min-width: 300px;
       margin-right: 20px;
+      max-height: 50vw;
+    }
+    h1 {
+      font-size: 70px;
+      letter-spacing: 25px;
+      line-height: 84px;
     }
   }
   @media screen and (min-width: @screen-m) {
     .visuel {
       min-width: 540px;
-      max-height: 50vw;
       margin-right: 50px;
     }
+  }
+  @media screen and (min-width: @screen-l) {
   }
 }
