--- a/assets/style/less/layout/theme.less
+++ b/assets/style/less/layout/theme.less
@@ -6,6 +6,8 @@
 
 @border-color: @red;
 @muted-font-color: @dark-grey;
+@filter-color: fade(@accent-color, 92%);
+@filter-color-smooth: fade(@accent-color, 10%);
 
 // --------- GENERAL
 
