--- a/assets/style/less/layout/header.less
+++ b/assets/style/less/layout/header.less
@@ -54,7 +54,7 @@ header {
     }
   }
   .menu {
-    background-color: fade(@accent-color, 92%);
+    background-color: @filter-color;
     overflow: auto;
     max-height: calc(~"100vh - 60px");
     min-height: 100vh;
