--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -3,18 +3,17 @@
 // Masonry
 
 .grid {
-  position: relative;
   .grid-sizer,
   .grid-item {
     width: calc(~"50% - 10px");
   }
   .grid-item {
     margin-bottom: 20px;
+    &.width2 { width: 100%; }
   }
 
   .gutter-sizer { width: 20px; }
 
-  .grid-item.grid-item--width2 { width: 100%; }
 }
 
 @media screen and (min-width: @screen-s) {
@@ -22,6 +21,9 @@
     .grid-sizer,
     .grid-item {
       width: calc(~"32.9% - 10px");
+      &.width2 {
+        width: calc(~"67.1% - 10px");
+      }
     }
   }
 }
@@ -31,6 +33,9 @@
     .grid-sizer,
     .grid-item {
       width: calc(~"25.3% - 20px");
+      &.width2 {
+        width: calc(~"50% - 10px");
+      }
     }
   }
 }
