--- a/source/_head.jade
+++ b/source/_head.jade
@@ -9,6 +9,7 @@ head
   
   link(rel="stylesheet", href="assets/style/css/app.css")
   link(href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet")
+  link(href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css" rel="stylesheet")
   
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
   
