--- a/assets/style/less/layout/modal.less
+++ b/assets/style/less/layout/modal.less
@@ -44,6 +44,10 @@
     text-transform: uppercase;
     font-size: 12px;
     letter-spacing: 2px;
+    transition: color .3s @ease;
+    &:hover {
+      color: @accent-color;
+    }
   }
   @media screen and (min-width: @screen-xs) {
     padding: 50px;
