--- a/assets/style/less/layout/footer.less
+++ b/assets/style/less/layout/footer.less
@@ -7,4 +7,8 @@ footer {
   color: @light-grey;
   text-align: center;
   padding: 30px;
+  @media screen and (min-width: @screen-m) {
+    margin-top: 50px;
+    padding: 50px;
+  }
 }
