--- a/assets/style/less/layout/id.less
+++ b/assets/style/less/layout/id.less
@@ -29,7 +29,7 @@
     display: -ms-flex;
     display: flex;
     .visuel {
-      min-width: 300px;
+      min-width: 50%;
       margin-right: 20px;
       max-height: 50vw;
     }
@@ -41,10 +41,12 @@
   }
   @media screen and (min-width: @screen-m) {
     .visuel {
-      min-width: 540px;
       margin-right: 50px;
     }
   }
   @media screen and (min-width: @screen-l) {
+    .visuel {
+      max-height: 40vw;
+    }
   }
 }
