--- a/assets/style/less/layout/theme.less
+++ b/assets/style/less/layout/theme.less
@@ -60,6 +60,17 @@ p {
     color: @font-color;
     font-style: normal;
     margin: 50px 0 30px;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    @media screen and (min-width: @screen-m) {
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+    .btn {
+      display: table;
+      margin: 30px auto 0;
+    }
   }
 }
 .txt-center {
