--- a/source/about.jade
+++ b/source/about.jade
@@ -15,6 +15,6 @@ block content
       p Before going back to school, I was a webdesigner at Wexperience, a web agency in Roubaix focused on UX design. My work there consisted of many things, including wireframing, front-end development, AB testing, analyzing focus groups and user testing.
       p This year I've decided to dedicate myself to learning again and to focus on developing my creativity. Drawing has always been a big part of my life and I am very happy to be able to focus on more illustrated projects.
       p I've been doing a lot of work for bands of many styles! Rock, Folk, House music, it's always a pleasure to work with artists.
-      p.cta If you wish to make a commission please feel free to get in touch!
-      p
+      p.cta
+        | If you wish to make a commission please feel free to get in touch!
         +btn-large("Hire me","mailto:hello@morganneborowczyk.design")
