modals and photo grid

--- a/assets/style/less/layout/header.less
+++ b/assets/style/less/layout/header.less
@@ -2,7 +2,7 @@
 
 header {
   background-color: @background-color;
-  margin-bottom: -20px;
+  // margin-bottom: -20px;
   position: relative;
   z-index: 2;
   .container {
