--- a/source/home.jade
+++ b/source/home.jade
@@ -13,11 +13,59 @@ block content
     .gutter-sizer
     //- .grid-item--width2
     
-    +grid-item("project-mad","modal-project-mad", "assets/images/work/MAD-1.jpg", "Musée des Arts Décoratifs", "width2", "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quam numquam earum nobis, eligendi consequuntur praesentium, repellat, hic libero labore impedit provident et reiciendis illo dignissimos aperiam officia, tempore incidunt?")
+    +grid-item("Musée des Arts Décoratifs",
+      "project-mad",
+      "",
+      "modal-project-mad",
+      "MAD-1.jpg",
+      "MAD-2.jpg",
+      "MAD-3.jpg")
     
-    +grid-item("dejeuner","modal-dejeuner", "assets/images/work/dejeuner-sur-lherbe.jpg", "Déjeuner sur l'Herbe", "", "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quam numquam earum nobis, eligendi consequuntur praesentium, repellat, hic libero labore impedit provident et reiciendis illo dignissimos aperiam officia, tempore incidunt?")
+    +grid-item("One More Time with Feeling",
+      "one-more-time",
+      "",
+      "modal-one-more-time",
+      "one-more-time-with-feeling__an-act-of-revenge.jpg",
+      "one-more-time-with-feeling__women-are-like-fucking-3d.jpg",
+      "one-more-time-with-feeling__girl-in-amber.jpg")
+    
+    +grid-item("Balmonts",
+      "balmonts",
+      "",
+      "modal-balmonts",
+      "balmonts__mockup-front.jpg",
+      "balmonts__mockup-back.jpg")
+    
+    +grid-item("Verminoise",
+      "verminoise",
+      "",
+      "modal-verminoise",
+      "verminoise__pochette-avant.jpg")
+    
+    +grid-item("Collaboration with Manchester (UK) artist Doomsnakes",
+      "doomsnakes",
+      "",
+      "modal-doomsnakes",
+      "collab__doomsnakes.jpg")
+    
+    +grid-item("Holispark",
+      "holispark",
+      "",
+      "modal-holispark",
+      "holispark__tshirt__cut-the-rope.jpg",
+      "holispark__totebags.jpg")
+    
+    +grid-item("Déjeuner sur l'Herbe",
+      "dejeuner",
+      "",
+      "modal-dejeuner",
+      "dejeuner-sur-lherbe.jpg")
 
-    +grid-item("toile-de-jouy","modal-toile-de-jouy", "assets/images/work/toile-de-jouy.png", "Toile de Jouy", "", "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quam numquam earum nobis, eligendi consequuntur praesentium, repellat, hic libero labore impedit provident et reiciendis illo dignissimos aperiam officia, tempore incidunt?")
+    +grid-item("Toile de Jouy",
+      "toile-de-jouy",
+      "",
+      "modal-toile-de-jouy",
+      "toile-de-jouy.png")
 
   script(src="assets/js/masonry.pkgd.min.js")
 
@@ -42,10 +90,21 @@ block content
       },50);
       $('body').addClass('stuck');
     });
-    $('.modal .close').on('click', function(){
-      $(this).parents('.modal').removeClass('visible');
+    //- Close modals
+    function closeModal() {
+      $('.modal').removeClass('visible');
       setTimeout(function(){
         $('.modal').removeClass('ready');
       },100);
       $('body').removeClass('stuck');
+    }
+    //--- Click close
+    $('.modal .close').on('click', function(){
+      closeModal();
+    });
+    //--- Click outside
+    $('.modal').on().click(function (event) {
+       if(!$(event.target).closest('.modal-content').length && !$(event.target).is('.modal-content')) {
+         closeModal();
+       }     
     });
