add projects to grid

--- a/source/home.jade
+++ b/source/home.jade
@@ -20,7 +20,43 @@ block content
       "MAD-1.jpg",
       "MAD-2.jpg",
       "MAD-3.jpg")
-    
+    +grid-item("Déjeuner sur l'Herbe",
+      "dejeuner",
+      "",
+      "modal-dejeuner",
+      "dejeuner-sur-lherbe.jpg")
+    +grid-item("Toile de Jouy",
+      "toile-de-jouy",
+      "",
+      "modal-toile-de-jouy",
+      "toile-de-jouy.png")
+    +grid-item("Verminoise",
+      "verminoise",
+      "",
+      "modal-verminoise",
+      "verminoise__pochette-avant.jpg")
+    +grid-item("Jethro Morris",
+      "jethro",
+      "",
+      "modal-jethro",
+      "jethro-morris__mockup.jpg")
+    +grid-item("Holispark",
+      "holispark",
+      "",
+      "modal-holispark",
+      "holispark__tshirt__cut-the-rope.jpg",
+      "holispark__totebags.jpg")
+    +grid-item("Balmonts",
+      "balmonts",
+      "",
+      "modal-balmonts",
+      "balmonts__mockup-front.jpg",
+      "balmonts__mockup-back.jpg")
+    +grid-item("Collaboration with Manchester (UK) artist Doomsnakes",
+      "doomsnakes",
+      "",
+      "modal-doomsnakes",
+      "collab__doomsnakes.jpg")
     +grid-item("One More Time with Feeling",
       "one-more-time",
       "",
@@ -28,44 +64,6 @@ block content
       "one-more-time-with-feeling__an-act-of-revenge.jpg",
       "one-more-time-with-feeling__women-are-like-fucking-3d.jpg",
       "one-more-time-with-feeling__girl-in-amber.jpg")
-    
-    +grid-item("Balmonts",
-      "balmonts",
-      "",
-      "modal-balmonts",
-      "balmonts__mockup-front.jpg",
-      "balmonts__mockup-back.jpg")
-    
-    +grid-item("Verminoise",
-      "verminoise",
-      "",
-      "modal-verminoise",
-      "verminoise__pochette-avant.jpg")
-    
-    +grid-item("Collaboration with Manchester (UK) artist Doomsnakes",
-      "doomsnakes",
-      "",
-      "modal-doomsnakes",
-      "collab__doomsnakes.jpg")
-    
-    +grid-item("Holispark",
-      "holispark",
-      "",
-      "modal-holispark",
-      "holispark__tshirt__cut-the-rope.jpg",
-      "holispark__totebags.jpg")
-    
-    +grid-item("Déjeuner sur l'Herbe",
-      "dejeuner",
-      "",
-      "modal-dejeuner",
-      "dejeuner-sur-lherbe.jpg")
-
-    +grid-item("Toile de Jouy",
-      "toile-de-jouy",
-      "",
-      "modal-toile-de-jouy",
-      "toile-de-jouy.png")
 
   script(src="assets/js/masonry.pkgd.min.js")
 
