--- a/assets/style/less/layout/modal.less
+++ b/assets/style/less/layout/modal.less
@@ -33,7 +33,7 @@
       margin-top: 0;
     }
     img {
-      &:not(last-child) {
+      &:not(:last-child) {
         margin-bottom: 20px;
       }
     }
