vampires from space

--- a/source/home.jade
+++ b/source/home.jade
@@ -57,6 +57,11 @@ block content
       "",
       "modal-doomsnakes",
       "collab__doomsnakes.jpg")
+    +grid-item("Vampires from Space",
+      "vampires",
+      "",
+      "modal-vampires",
+      "vampires-from-space.jpg")
     +grid-item("One More Time with Feeling",
       "one-more-time",
       "",
