--- a/source/home.jade
+++ b/source/home.jade
@@ -22,7 +22,7 @@ block content
       "MAD-3.jpg")
     +grid-item("Déjeuner sur l'Herbe",
       "dejeuner",
-      "",
+      "width2",
       "modal-dejeuner",
       "dejeuner-sur-lherbe.jpg")
     +grid-item("Toile de Jouy",
@@ -30,16 +30,16 @@ block content
       "",
       "modal-toile-de-jouy",
       "toile-de-jouy.png")
-    +grid-item("Verminoise",
-      "verminoise",
-      "",
-      "modal-verminoise",
-      "verminoise__pochette-avant.jpg")
     +grid-item("Jethro Morris",
       "jethro",
       "",
       "modal-jethro",
       "jethro-morris__mockup.jpg")
+    +grid-item("Verminoise",
+      "verminoise",
+      "",
+      "modal-verminoise",
+      "verminoise__pochette-avant.jpg")
     +grid-item("Holispark",
       "holispark",
       "",
@@ -62,6 +62,16 @@ block content
       "",
       "modal-vampires",
       "vampires-from-space.jpg")
+    +grid-item("Shadow of A",
+      "shadow",
+      "width2",
+      "modal-shadow",
+      "shadow-of-a.jpg")
+    +grid-item("Cave",
+      "cave",
+      "",
+      "modal-cave",
+      "cave.jpg")
     +grid-item("One More Time with Feeling",
       "one-more-time",
       "",
