disable right click on images

--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -1,6 +1,12 @@
 //main: ../app.less
 
-// Masonry
+.gotcha {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
 .grid {
   .grid-sizer,
