--- a/assets/style/less/layout/modal.less
+++ b/assets/style/less/layout/modal.less
@@ -32,7 +32,8 @@
       display: block;
       margin-top: 0;
     }
-    img {
+    .source {
+      position: relative;
       &:not(:last-child) {
         margin-bottom: 20px;
       }
