--- a/source/_head.jade
+++ b/source/_head.jade
@@ -1,6 +1,12 @@
 head
   script(async src="https://www.googletagmanager.com/gtag/js?id=UA-101627756-3")
-  script(src="assets/js/analytics.js")
+  //- Google Tag Manager
+  script.
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TNK7SR9');
   
   meta(charset="UTF-8")
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
