--- a/source/_layout.jade
+++ b/source/_layout.jade
@@ -7,6 +7,10 @@ html(lang="en")
   include _head.jade
   body
   
+    //- GOOGLE TAG MANAGER (NOSCRIPT)
+    noscript.
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TNK7SR9" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  
     //- MIXINS
   
     mixin social(color)
