--- a/source/home.jade
+++ b/source/home.jade
@@ -28,7 +28,7 @@ block content
       "toile-de-jouy",
       "",
       "modal-toile-de-jouy",
-      "toile-de-jouy.png")
+      "toile-de-jouy.jpg")
     +grid-item("Jethro Morris",
       "jethro",
       "",
