--- a/source/home.jade
+++ b/source/home.jade
@@ -83,11 +83,13 @@ block content
 
   script.
     //- Masonry
-    $('.grid').masonry({
-      itemSelector: '.grid-item',
-      columnWidth: '.grid-sizer',
-      gutter: '.gutter-sizer',
-      percentPosition: true
+    $(document).ready(function(){
+      $('.grid').masonry({
+        itemSelector: '.grid-item',
+        columnWidth: '.grid-sizer',
+        gutter: '.gutter-sizer',
+        percentPosition: true
+      });
     });
   
   
