--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -12,6 +12,7 @@
   .grid-sizer,
   .grid-item {
     width: calc(~"50% - 10px");
+    display: block;
   }
   .grid-item {
     margin-bottom: 20px;
