--- a/source/home.jade
+++ b/source/home.jade
@@ -80,15 +80,21 @@ block content
       "one-more-time-with-feeling__girl-in-amber.jpg")
 
   script(src="assets/js/masonry.pkgd.min.js")
+  script(src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js")
 
   script.
     //- Masonry
     $(document).ready(function(){
-      $('.grid').masonry({
+      var $grid = $('.grid');
+      $grid.masonry({
         itemSelector: '.grid-item',
         columnWidth: '.grid-sizer',
         gutter: '.gutter-sizer',
-        percentPosition: true
+        percentPosition: true,
+        stagger: 30
+      });
+      $grid.imagesLoaded().progress( function() {
+        $grid.masonry('layout');
       });
     });
   
