--- a/assets/style/less/layout/grid.less
+++ b/assets/style/less/layout/grid.less
@@ -16,6 +16,8 @@
   }
   .grid-item {
     margin-bottom: 20px;
+    min-height: 20px;
+    background-color: @filter-color-smooth;
     &.width2 { width: 100%; }
   }
 
