--- a/source/home.jade
+++ b/source/home.jade
@@ -91,7 +91,8 @@ block content
         columnWidth: '.grid-sizer',
         gutter: '.gutter-sizer',
         percentPosition: true,
-        stagger: 30
+        stagger: 30,
+        transitionDuration: '0.8s'
       });
       $grid.imagesLoaded().progress( function() {
         $grid.masonry('layout');
