--- a/source/_head.jade
+++ b/source/_head.jade
@@ -11,7 +11,7 @@ head
   meta(charset="UTF-8")
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
   title Morganne Borowczyk | #{page}
-  meta(description=description)
+  meta(name="description" content=description)
   
   link(rel="stylesheet", href="assets/style/css/app.css")
   link(href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet")
