Home : Title & description

--- a/source/home.jade
+++ b/source/home.jade
@@ -3,11 +3,10 @@
 extend _layout.jade
 
 block var
-  - page = "Home"
-  - description = "Morganne Borowczyk is a French designer and illustrator"
+  - page = "Illustration & Design portfolio"
+  - description = "Gloomy illustrations made in Lille, France. Merch for bands, CD covers, t-shirts, totebags..."
 
 block content
-  //- include _grid.jade
   .grid
     .grid-sizer
     .gutter-sizer
