--- a/assets/style/less/layout/fonts.less
+++ b/assets/style/less/layout/fonts.less
@@ -1,24 +1,24 @@
 //main: ../app.less
 
 @font-face {
-    font-family: 'bluu';
-    src: url('../../fonts/bluunext-bold-webfont.woff2') format('woff2'),
-         url('../../fonts/bluunext-bold-webfont.woff') format('woff'),
-         url('../../fonts/bluunext-bold.ttf') format('truetype'),
-         url('../../fonts/bluunext-bold-webfont.svg#bluu_nextbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'bluu';
+  src: url('../../fonts/bluunext-bold-webfont.woff2') format('woff2'),
+  url('../../fonts/bluunext-bold-webfont.woff') format('woff'),
+  url('../../fonts/bluunext-bold.ttf') format('truetype'),
+  url('../../fonts/bluunext-bold-webfont.svg#bluu_nextbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
 
 }
 
 @font-face {
-    font-family: 'bluu';
-    src: url('../../fonts/bluunext-bolditalic-webfont.woff2') format('woff2'),
-         url('../../fonts/bluunext-bolditalic-webfont.woff') format('woff'),
-         url('../../fonts/bluunext-bolditalic.ttf') format('truetype'),
-         url('../../fonts/bluunext-bolditalic-webfont.svg#bluu_nextbold_italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
+  font-family: 'bluu';
+  src: url('../../fonts/bluunext-bolditalic-webfont.woff2') format('woff2'),
+  url('../../fonts/bluunext-bolditalic-webfont.woff') format('woff'),
+  url('../../fonts/bluunext-bolditalic.ttf') format('truetype'),
+  url('../../fonts/bluunext-bolditalic-webfont.svg#bluu_nextbold_italic') format('svg');
+  font-weight: normal;
+  font-style: italic;
 
 }
 
@@ -40,6 +40,12 @@ h6, .h6 {
 
 h1, .h1 {
   font-size: 24px;
-  line-height: 33px;
-  letter-spacing: 10px;
+  letter-spacing: 3px;
+  text-align: center;
+  margin: 0 0 20px;
+  @media screen and (min-width: @screen-m) {
+    font-size: 30px;
+    letter-spacing: 5px;
+    margin: 0 0 50px;
+  }
 }
