--- a/assets/style/less/layout/id.less
+++ b/assets/style/less/layout/id.less
@@ -16,12 +16,15 @@
     height: calc(~"100vw - 40px");
     max-height: 320px;
     padding: 50px;
-    h1 {
+    h1, .h1 {
       position: relative;
       text-align: center;
       color: @background-color;
       display: block;
       margin: 10px 0 0;
+      font-size: 24px;
+      line-height: 33px;
+      letter-spacing: 10px;
     }
   }
   @media screen and (min-width: @screen-s) {
@@ -33,7 +36,7 @@
       margin-right: 20px;
       max-height: 50vw;
     }
-    h1 {
+    h1, .h1 {
       font-size: 70px;
       letter-spacing: 25px;
       line-height: 84px;
