--- a/source/home.jade
+++ b/source/home.jade
@@ -7,6 +7,7 @@ block var
   - description = "Gloomy illustrations made in Lille, France. Merch for bands, CD covers, t-shirts, totebags..."
 
 block content
+  h1 Illustrator & Designer from Lille, France
   .grid
     .grid-sizer
     .gutter-sizer
