improve touch menu

--- a/assets/style/less/layout/header.less
+++ b/assets/style/less/layout/header.less
@@ -18,6 +18,7 @@ header {
     text-align: left;
     font-style: italic;
     transition: all .3s @ease;
+    margin-right: 50px;
   }
   .toggle {
     height: 30px;
@@ -137,10 +138,11 @@ ul.social {
   justify-content: space-around;
 }
 
-@media screen and (min-width: @screen-s) {
+@media screen and (min-width: @screen-xs) {
   header {
     .brand {
       text-align: center;
+      margin-left: 50px;
     }
   }
 }
