--- a/source/home.jade
+++ b/source/home.jade
@@ -80,7 +80,7 @@ block content
       "one-more-time-with-feeling__girl-in-amber.jpg")
 
   script(src="assets/js/masonry.pkgd.min.js")
-  script(src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js")
+  script(src="assets/js/imagesloaded.pkgd.min.js")
 
   script.
     //- Masonry
