--- a/source/_layout.jade
+++ b/source/_layout.jade
@@ -56,19 +56,19 @@ html(lang="en")
       
     mixin grid-item(name, id, size, target, source, source2, source3)
       - if (source3)
-        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div><div class='source'><div><img src='assets/images/work/"+source2+"'></div><div class='gotcha'></div></div><div class='source'><div><img src='assets/images/work/"+source3+"'></div><div class='gotcha'></div></div></div></div>")
+        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source3+"'></div><div class='gotcha'></div></div></div></div>")
           div
-            img(src="assets/images/work/"+source alt=name)
+            img.lazy(src="assets/images/work/"+source alt=name)
           .gotcha    
       - else if (source2)
-        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div><div class='source'><div><img src='assets/images/work/"+source2+"'></div><div class='gotcha'></div></div></div></div>")
+        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+"'></div><div class='gotcha'></div></div></div></div>")
           div
-            img(src="assets/images/work/"+source alt=name)
+            img.lazy(src="assets/images/work/"+source alt=name)
           .gotcha    
       - else
-        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div></div></div>")
+        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div></div></div>")
           div
-            img(src="assets/images/work/"+source alt=name)
+            img.lazy(src="assets/images/work/"+source alt=name)
           .gotcha    
     
     
