--- a/source/_layout.jade
+++ b/source/_layout.jade
@@ -54,21 +54,21 @@ html(lang="en")
     mixin btn-small(text, link)
       a.btn.btn-small(href=link)= text
       
-    mixin grid-item(name, id, size, target, source, source2, source3)
+    mixin grid-item(name, id, size, description, source, source2, source3)
       - if (source3)
-        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source3+"'></div><div class='gotcha'></div></div></div></div>")
+        a.grid-item(class=size href="#" data-modal="<div class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+"' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source3+"' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><p>"+description+"</p></div></div>")
           div
-            img.lazy(src="assets/images/work/"+source alt=name)
+            img.lazy(src="assets/images/work/"+source title=name alt=description)
           .gotcha    
       - else if (source2)
-        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+"'></div><div class='gotcha'></div></div></div></div>")
+        a.grid-item(class=size href="#" data-modal="<div class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source2+"' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><p>"+description+"</p></div></div>")
           div
-            img.lazy(src="assets/images/work/"+source alt=name)
+            img.lazy(src="assets/images/work/"+source title=name alt=description)
           .gotcha    
       - else
-        a.grid-item(class=size href="#"+target data-modal="<div id='"+target+"' class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"'></div><div class='gotcha'></div></div></div></div>")
+        a.grid-item(class=size href="#" data-modal="<div class='modal'><div class='modal-content'><h2>"+name+"</h2><div class='close' title='close'></div><div class='source'><div><img class='lazy' src='assets/images/work/"+source+"' title='"+name+"' alt='"+description+"'></div><div class='gotcha'></div></div><p>"+description+"</p></div></div>")
           div
-            img.lazy(src="assets/images/work/"+source alt=name)
+            img.lazy(src="assets/images/work/"+source title=name alt=description)
           .gotcha    
     
     
